<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateDrawable="@drawable/loading_p"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="正在加载请稍后......" />

    </LinearLayout>


    <book.yong.cn.book.adapter.BookViewPager
        android:id="@+id/viewPager_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp" />

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_alignParentTop="true"
        android:background="#000"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#fff"
            android:layout_marginTop="30dp">

            <book.yong.cn.book.jutil.FontTextView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/back"
                android:textSize="20sp" />

            <book.yong.cn.book.jutil.FontTextView
                android:id="@+id/more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:text="@string/more"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/join_bookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/more"
                android:layout_centerVertical="true"
                android:layout_marginRight="40dp"
                android:text="加入书签" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:background="#fff"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <book.yong.cn.book.jutil.FontTextView
                    android:id="@+id/catalogue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/classify"
                    android:textColor="@drawable/select_text_view"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/classify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/catalogue"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="2dp"
                    android:text="目录"
                    android:textColor="@drawable/select_text_view"
                    android:textSize="14sp" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/two"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <book.yong.cn.book.jutil.FontTextView
                    android:id="@+id/pro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/pro"
                    android:textColor="@drawable/select_text_view"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pro"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="2dp"
                    android:text="进度"
                    android:textColor="@drawable/select_text_view"
                    android:textSize="14sp" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/three"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <book.yong.cn.book.jutil.FontTextView
                    android:id="@+id/setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/setting"
                    android:textColor="@drawable/select_text_view"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/setting"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="2dp"
                    android:text="设置"
                    android:textColor="@drawable/select_text_view"
                    android:textSize="14sp" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/four"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <book.yong.cn.book.jutil.FontTextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/time"
                    android:textColor="@drawable/select_text_view"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/time"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="2dp"
                    android:text="夜间"
                    android:textColor="@drawable/select_text_view"
                    android:textSize="14sp" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>