<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start"
    tools:context=".activity.MainActivity">

    <!--主界面-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fafaff"
        android:orientation="vertical">

        <!--内容区域-->
        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"></FrameLayout>

        <!--底部导航栏-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/linear_layout_top"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/bookshelf_bottom"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <book.yong.cn.book.jutil.FontTextView
                        android:id="@+id/bookshelf_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/bookshelf"
                        android:textColor="@drawable/select_text_view"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/bookshelf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/bookshelf_icon"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="2dp"
                        android:text="书架"
                        android:textColor="@drawable/select_text_view"
                        android:textSize="10sp" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bookCity_bottom"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <book.yong.cn.book.jutil.FontTextView
                        android:id="@+id/bookCity_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/bookCity"
                        android:textColor="@drawable/select_text_view"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/bookCity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/bookCity_icon"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="2dp"
                        android:text="书城"
                        android:textColor="@drawable/select_text_view"
                        android:textSize="10sp" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/paiHang_bottom"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <book.yong.cn.book.jutil.FontTextView
                        android:id="@+id/paiHang_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/paiHang"
                        android:textColor="@drawable/select_text_view"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/paiHang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/paiHang_icon"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="2dp"
                        android:text="排行"
                        android:textColor="@drawable/select_text_view"
                        android:textSize="10sp" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/classify_bottom"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <book.yong.cn.book.jutil.FontTextView
                        android:id="@+id/classify_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/classify"
                        android:textColor="@drawable/select_text_view"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/classify"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/classify_icon"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="2dp"
                        android:text="分类"
                        android:textColor="@drawable/select_text_view"
                        android:textSize="10sp" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!--左侧导航栏-->
    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_header_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorEditText_false"
        app:headerLayout="@layout/activity_menu"
        app:menu="@menu/left_menu_list">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/loginExit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:textColor="#ffffff"
                android:text="退出账号"
                android:textSize="18sp"
                android:gravity="center"
                android:background="@color/colorAccent"/>
        </RelativeLayout>
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>